# loom-agent

./: .editorconfig  .gitignore  .pre-commit-config.yaml  SECURITY.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md  copilot-instructions_zh.md
.github/agents/: teacher.agent.md
examples/: hello_agent.py
examples/voice_companion/: E2E_TESTING.md  README.md  STREAMING_TTS_GUIDE.md  confirmation_demo.py  hello_voice.py  multi_turn_voice.py  multi_user_demo.py  performance_demo.py  production_resilience_demo.py  register_voiceprint.py  resilience_demo.py  run_e2e_test.sh  streaming_tts_demo.py  test_client.py  test_multi_turn.py  voiceprint_demo.py
examples/voice_companion/fixtures/: .gitkeep  README.md  generate_samples.sh  generate_test_audio.py  websocket_client.py
loom-studio/: test_studio.py
loom-studio/backend/: main.py
loom/adapters/: __init__.py  converters.py  registry.py
loom/adapters/audio/: __init__.py  adapter.py  audio_config.example.json  confirmation.py  context.py  events.py  models.py  monitoring.py  performance.py  permissions.py  resilience.py  session.py
loom/adapters/audio/asr/: __init__.py  base.py  funasr.py
loom/adapters/audio/tts/: __init__.py  base.py  cloud.py  edge.py
loom/adapters/audio/vad/: __init__.py  base.py  silero.py
loom/adapters/audio/voiceprint/: __init__.py  base.py  client.py  storage.py
loom/adapters/audio/websocket/: __init__.py  protocol.py  server.py
loom/api/: factory.py  main.py
loom/builtin/memory/: metabolic.py  pso.py  sanitizers.py  validators.py
loom/builtin/tools/: __init__.py  roi.py
loom/config/: tool.py
loom/core/: events.py  structured_logger.py
loom/infra/: llm.py  logging.py  store.py
loom/infra/transport/: memory.py  nats.py  redis.py
loom/interfaces/: audio_adapter.py  llm.py  memory.py  store.py  transport.py
loom/kernel/: base_interceptor.py  bus.py  dispatcher.py  state.py
loom/kernel/interceptors/: __init__.py  adaptive.py  budget.py  depth.py  hitl.py  studio.py  timeout.py
loom/memory/: hierarchical.py
loom/node/: agent.py  base.py  crew.py  router.py  tool.py
loom/protocol/: cloudevents.py  interfaces.py  mcp.py  memory_operations.py  patch.py
specs/001-roi-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-roi-tool/checklists/: requirements.md
specs/001-roi-tool/contracts/: roi-tool.schema.json
tests/: conftest.py  test_event_flow.py
tests/integration/: test_advanced.py  test_agent_loop.py  test_connectivity.py  test_controls.py  test_crew_sanitize.py  test_memory.py  test_message_format.py  test_metabolic_memory.py  test_rpc.py  test_studio_full.py  test_tools.py
tests/unit/tools/: test_roi.py
