[tool.poetry]
name = "loom-agent"
version = "0.0.5"
description = "Production-ready Python Agent framework with enterprise-grade reliability and observability"
authors = ["kongusen <wanghaishan0210@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "loom"}]

homepage = "https://github.com/kongusen/loom-agent"
repository = "https://github.com/kongusen/loom-agent"
documentation = "https://github.com/kongusen/loom-agent#readme"

keywords = [
  "ai",
  "llm",
  "agent",
  "multi-agent",
  "rag",
  "tooling",
  "asyncio",
]

classifiers = [
  "Development Status :: 3 - Alpha",  # First release - Alpha stage
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"

# Optional runtime deps (install via extras)
openai = {version = "^1.6.0", optional = true}
anthropic = {version = "^0.7.0", optional = true}
chromadb = {version = "^0.4.0", optional = true}
pinecone-client = {version = ">=2.2,<4.0", optional = true}
fastapi = {version = "^0.104.0", optional = true}
uvicorn = {extras = ["standard"], version = "^0.24.0", optional = true}
websockets = {version = "^12.0", optional = true}
numpy = {version = "^1.24.0", optional = true}
structlog = {version = "^23.2.0", optional = true}
weakref-tools = {version = "^1.0.0", optional = true}
asyncio-throttle = {version = "^1.0.2", optional = true}
cachetools = {version = "^5.3.0", optional = true}
psutil = {version = "^5.9.0", optional = true}
docker = {version = "^7.0.0", optional = true}
mcp = {version = "^0.2.0", optional = true}

# Audio adapter dependencies (for voice interaction)
torch = {version = "2.2.2", optional = true}
silero-vad = {version = "5.1.2", optional = true}
funasr = {version = "1.2.3", optional = true}
edge-tts = {version = "7.0.0", optional = true}
opuslib = {version = "1.1.2", optional = true}
cryptography = {version = "^42.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
retrieval = ["chromadb", "pinecone-client", "numpy"]
web = ["fastapi", "uvicorn", "websockets"]
system = ["psutil", "docker"]
mcp = ["mcp"]
observability = ["structlog", "cachetools"]
audio = ["torch", "silero-vad", "funasr", "edge-tts", "opuslib", "cryptography", "websockets", "numpy"]
all = [
  "openai",
  "anthropic",
  "chromadb",
  "pinecone-client",
  "numpy",
  "fastapi",
  "uvicorn",
  "websockets",
  "psutil",
  "docker",
  "mcp",
  "structlog",
  "cachetools",
  "weakref-tools",
  "asyncio-throttle",
  "torch",
  "silero-vad",
  "funasr",
  "edge-tts",
  "opuslib",
  "cryptography",
]
