[tool.poetry]
name = "loom-agent"
version = "0.3.3"
description = "Enterprise-grade recursive state machine agent framework with event sourcing, multi-agent collaboration, hierarchical memory, and RAG integration"
authors = ["kongusen <wanghaishan0210@gmail.com>"]
readme = "README.md"
license = "Apache-2.0 with Commons Clause"
packages = [{ include = "loom" }]

homepage = "https://github.com/kongusen/loom-agent"
repository = "https://github.com/kongusen/loom-agent"
documentation = "https://github.com/kongusen/loom-agent#readme"

keywords = ["ai", "llm", "agent", "multi-agent", "rag", "tooling", "asyncio"]

classifiers = [
  "Development Status :: 3 - Alpha",                            # First release - Alpha stage
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pyyaml = "^6.0"
rich = "^13.7.0"
websockets = "^12.0"
redis = { version = "^5.0.1", optional = true }
nats-py = { version = "^2.6.0", optional = true }

[tool.poetry.extras]
llm = ["openai"]                                  # 支持主流 LLM（OpenAI, DeepSeek, Qwen, Kimi 等）
anthropic = ["anthropic"]                         # 支持 Anthropic Claude
studio = ["websockets"]                           # Loom Studio 可视化服务
redis = ["redis"]                                 # Redis 传输层支持
nats = ["nats-py"]                                # NATS 传输层支持
all = ["openai", "anthropic", "redis", "nats-py"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG001", "ARG002"]  # Allow unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "nats.*",
    "websockets.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "slow: mark test as slow running",
]

[tool.coverage.run]
source = ["loom"]
omit = [
    "tests/*",
    "loom-studio/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

